Worked on the todoList. Added scrollbar and corrected checkboxes. Replaced all instances of 'flex flex-col' with 'grid' to improve responsiveness. Opted to include button customizations within the button element.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,11 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 /* resources/css/app.css */
 
 .mainScreen {
- background-image: linear-gradient(bottom, red, green)
+ background-image: linear-gradient(to bottom, red, green)
 }
 
 ::-webkit-scrollbar {
